<?xml version="1.0" encoding="utf-8"?>
<resources>
						<!-- Text Strings for easy editing -->
						
    <string name="velkommen">Denne applikasjonen er laget av 3 studenter ved UiA. Vi har laget den som en del av et prosjekt i faget IS-206 Åpen kildekode programvare.</string>
    <string name="app_name">Ølpriser i Kristiansand</string>
    <string name="vis_utesteder">Vis utesteder</string>
    <string name="legg_til_pris">Legg til ny pris</string>
    <string name="utested_navn">Utested navn:</string>
    <string name="pris">Pris:</string>
    <string name="beskrivelse">Beskrivelse:</string>
    <string name="endre">Endre</string>
    <string name="slett">Slett</string>
    <string name="lagre">Lagre</string>
    <string name="alle_utesteder">Alle utesteder</string>
    <string name="legg_til_utested">Legg til utested</string>
    <string name="endre_utested">Endre utested</string>
    <string name="vent">Laster utesteder. Vennligst vent..</string>
    <string name="rating">Rating:</string>
    <string name="hjem">Hjem</string>
    <string name="tips">Tips oss</string>
    <string name="omoss">Om Oss</string>
    <string name="utested">Utested</string>
    <string name="endre_pris">Endre pris</string>
    <string name="endre_rating">Endre rating</string>
    <string name="til">Til:</string>
    <string name="email">post@olpriser.no</string>
    <string name="sort_rating">Rating</string>
    <string name="sort_pris">Pris</string>
    <string name="sort_navn">Navn</string>
    <string name="tips_tekst">Hvis det er et utested du synes vi bør legge til kan du tipse oss her. Vi er takknemmelige for alle tips!</string>

</resources>