<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:paddingTop="10dip">

    <TextView
        android:id="@+id/velkommen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/velkommen"
        android:padding="10dip" />

    <!--  Sample Dashboard screen with Two buttons -->
    <Button android:id="@+id/btnViewProducts"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/vis_utesteder"
        android:layout_marginTop="25dip"/>
    
    <Button android:id="@+id/btnCreateProduct"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/legg_til_pris"
        android:layout_marginTop="25dip"/>

</LinearLayout>