<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingTop="10dip" 
    android:background="@drawable/gradient_background" >

    
	<!-- Om oss overskrift -->    
    <TextView
        android:id="@+id/omoss"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dip"
        android:text="@string/omoss"
        android:textSize="20sp"
        android:textColor="#ffffff" />
        
	<!-- Om oss tekst -->    
    <TextView
        android:id="@+id/velkommen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dip"
        android:text="@string/velkommen"
        android:textSize="15sp"
        android:textColor="#ffffff" />
 
    <!-- Om oss bilde -->    
    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/forside" />
    
    <Button
        android:id="@+id/btnViewProducts"
        android:layout_width="298dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dip"
        android:background="@drawable/button"
        android:text="@string/vis_utesteder"
        android:textSize="25sp" 
        android:textColor="#ffffff"/>
    
    <Button
        android:id="@+id/btnCreateProduct"
        android:layout_width="298dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dip"
        android:background="@drawable/button"
        android:text="@string/legg_til_pris"
        android:textSize="25sp" 
        android:textColor="#ffffff" />

</LinearLayout>