<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@drawable/gradient_background" >

    <!-- Name text -->
    <TextView
        android:id="@+id/inputName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dip"
        android:layout_marginBottom="15dip"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp"
        android:singleLine="true"
        android:textSize="40sp"
        android:textColor="#ffffff" />
    
    <!-- Logo  -->
    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dip"
        android:paddingRight="10dip"
        android:paddingTop="10dip"           
        android:src="@drawable/krs1" />

    <!-- Description Label -->
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dip"
        android:paddingRight="10dip"
        android:paddingTop="30dip"
        android:text="@string/beskrivelse"
        android:textSize="24sp"
        android:textColor="#ffffff" />

    <!-- Description text -->
    <TextView
        android:id="@+id/inputDesc"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dip"
        android:gravity="top"
        android:lines="2"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp"
        android:textSize="18sp"
        android:textColor="#ffffff" />
    
    <LinearLayout 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        
    <!-- Price Label -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_weight="1"
        android:paddingLeft="10dip"
        android:paddingRight="10dip"
        android:paddingTop="10dip"
        android:text="@string/pris"
        android:textSize="24sp"
        android:textColor="#ffffff" />

    <!-- Price text -->
    <EditText
        android:id="@+id/editPrice"
        android:inputType="number"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:paddingLeft="10dip"
        android:paddingRight="10dip"
        android:paddingTop="10dip"
        android:layout_weight="0"
        android:maxLength="4"
        android:singleLine="true"
        android:textSize="24sp"
        android:textColor="#ffffff"
        android:layout_gravity="bottom" /> 
        
    <!-- Button endre pris -->
    <Button
        android:id="@+id/btnEditPrice"
        android:layout_width="80dp"
        android:layout_height="35dp"
        android:layout_gravity="bottom"
        android:layout_marginLeft="150dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/button"
        android:paddingTop="5dp"
        android:text="@string/lagre"
        android:textColor="#ffffff"
        android:textSize="18sp" />
    </LinearLayout>    
    
    <LinearLayout 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        
    <!-- Rating Label -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_weight="1"
        android:paddingLeft="10dip"
        android:paddingRight="10dip"
        android:paddingTop="10dip"
        android:text="@string/rating"
        android:textSize="24sp"
        android:textColor="#ffffff" />

    <!-- Rating text -->
    <TextView
        android:id="@+id/inputRating"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:paddingLeft="10dip"
        android:paddingRight="10dip"
        android:paddingTop="10dip"
        android:layout_weight="0"
        android:maxLength="4"
        android:singleLine="true"
        android:textSize="24sp"
        android:textColor="#ffffff" />  
    </LinearLayout> 

</LinearLayout>