<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@drawable/gradient_background" >
    
    <!-- Layout with two EditText, five TextViews, two buttons and a picture -->
    <!-- Price and Rating placed in a linear layout  -->
    
    <!-- Name text -->
    <TextView
        android:id="@+id/inputName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dip"
        android:layout_marginBottom="15dip"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp"
        android:singleLine="true"
        android:textSize="40sp"
        android:textColor="#ffffff" />
    
    <!-- Image  -->
    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dip"
        android:paddingRight="10dip"
        android:paddingTop="10dip"           
        android:src="@drawable/krs1" />

    <!-- Description Label -->
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dip"
        android:paddingRight="10dip"
        android:paddingTop="30dip"
        android:text="@string/beskrivelse"
        android:textSize="24sp"
        android:textColor="#ffffff" />

    <!-- Description text -->
    <TextView
        android:id="@+id/inputDesc"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dip"
        android:gravity="top"
        android:lines="2"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp"
        android:textSize="18sp"
        android:textColor="#ffffff" />
    
    <LinearLayout 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

    <RelativeLayout
     	android:id="@+id/rL123"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >        
        
    <!-- Price Label -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:paddingLeft="10dip"
        android:paddingRight="10dip"
        android:paddingTop="10dip"
        android:text="@string/pris"
        android:textSize="24sp"
        android:textColor="#ffffff" />
   
    <!-- Price text -->
    <EditText
        android:id="@+id/inputPrice"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:paddingLeft="10dip"
        android:paddingRight="10dip"
        android:paddingTop="10dip"
        android:maxLength="4"
        android:singleLine="true"
        android:textSize="24sp"
        android:textColor="#ffffff"
        android:layout_gravity="bottom"
        android:layout_marginLeft="100dp"
        android:inputType="number" /> 

    <!-- Button Edit Price -->
    <Button
        android:id="@+id/btnEditPrice"
        android:layout_width="80dp"
        android:layout_height="36dp"
        android:layout_gravity="bottom"
        android:layout_marginRight="10dip"
        android:layout_alignParentRight="true"
        android:layout_marginTop="10dp"
        android:background="@drawable/button"
        android:paddingTop="5dp"
        android:text="@string/lagre"
        android:textColor="#ffffff"
        android:textSize="16sp" />    

    </RelativeLayout>
    </LinearLayout>    
    
    <LinearLayout 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
    
    <RelativeLayout
     	android:id="@+id/rL12"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >         
        
    <!-- Rating Label -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:paddingLeft="10dip"
        android:paddingRight="10dip"
        android:paddingTop="10dip"
        android:text="@string/rating"
        android:textSize="24sp"
        android:textColor="#ffffff" />

    <!-- Rating text -->
    <EditText
        android:id="@+id/inputRating"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:paddingLeft="10dip"
        android:paddingRight="10dip"
        android:paddingTop="10dip"
        android:layout_marginLeft="100dp"
        android:maxLength="3"
        android:digits="12345"
        android:singleLine="true"
        android:textSize="24sp"
        android:textColor="#ffffff"
        android:inputType="number" /> 
        

    <!-- Button Edit Rating -->
    <Button
        android:id="@+id/btnEditRating"
        android:layout_width="80dp"
        android:layout_height="36dp"
        android:layout_gravity="bottom"
        android:layout_marginRight="10dip"
        android:layout_marginTop="10dp"
        android:layout_alignParentRight="true"
        android:background="@drawable/button"
        android:paddingTop="5dp"
        android:text="@string/lagre"
        android:textColor="#ffffff"
        android:textSize="16sp" />
  	</RelativeLayout>
    </LinearLayout> 

</LinearLayout>